--- a/manifest.json
+++ b/manifest.json
@@ -42,7 +42,8 @@
     },
     "default_title": "Extension Boilerplate",
     "default_popup": "popup.html"
-  }
+  },
+  "web_accessible_resources": ["scripts/inject.js"]
 }
 
 
