--- a/package.json
+++ b/package.json
@@ -1,55 +1,65 @@
 {
-  "name": "potato-sign",
-  "version": "0.0.4",
-  "description": "potato-sign",
+  "name": "chrome-extension-cli",
+  "version": "1.0.0",
+  "description": "chrome拓展脚手架",
+  "main": "index.js",
   "scripts": {
-    "chrome-build": "cross-env TARGET=chrome gulp",
-    "opera-build": "cross-env TARGET=opera gulp",
-    "firefox-build": "cross-env TARGET=firefox gulp",
-    "build": "cross-env NODE_ENV=production npm run chrome-build && cross-env NODE_ENV=production npm run opera-build && cross-env NODE_ENV=production npm run firefox-build",
-    "chrome-watch": "cross-env TARGET=chrome gulp watch",
-    "opera-watch": "cross-env TARGET=opera gulp watch",
-    "firefox-watch": "cross-env TARGET=firefox gulp watch",
-    "chrome-dist": "cross-env NODE_ENV=production cross-env TARGET=chrome gulp dist",
-    "opera-dist": "cross-env NODE_ENV=production cross-env TARGET=opera gulp dist",
-    "firefox-dist": "cross-env NODE_ENV=production cross-env TARGET=firefox gulp dist",
-    "dist": "npm run chrome-dist && npm run opera-dist && npm run firefox-dist"
+    "dev": "node config/dev.js",
+    "start": "node config/dev.js",
+    "build": "node config/prod.js",
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cleves0315/PotatoSign"
+    "url": "git+https://github.com/cleves0315/chrome-extension-cli.git"
   },
-  "author": "Cleves <cleves0315@gmail.com> (https://github.com/cleves0315)",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/cleves0315/PotatoSign/issues"
+    "url": "https://github.com/cleves0315/chrome-extension-cli/issues"
+  },
+  "homepage": "https://github.com/cleves0315/chrome-extension-cli#readme",
+  "dependencies": {
+    "nanoid": "^3.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "babel-core": "^6.1.2",
-    "babel-preset-es2015": "^6.1.2",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
-    "cross-env": "^3.2.4",
-    "event-stream": "^3.3.4",
-    "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-eslint": "^2.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^0.5.3",
-    "gulp-merge-json": "^1.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-run-sequence": "*",
-    "gulp-sass": "^3.0.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.4",
-    "gulp-zip": "^2.0.3",
-    "preprocessify": "^1.0.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
-  },
-  "dependencies": {
-    "nanoid": "^3.1.25"
+    "@babel/core": "^7.16.12",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "@types/chrome": "^0.0.176",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
+    "babel-preset-react-app": "^10.0.1",
+    "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.5.1",
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^6.1.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.5.1",
+    "sass": "^1.48.0",
+    "sass-loader": "^12.4.0",
+    "source-map-loader": "^3.0.1",
+    "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3",
+    "webpackbar": "^5.0.2"
   }
 }
