--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/cleves0315/chrome-extension-cli#readme",
   "dependencies": {
+    "antd": "^4.18.5",
     "nanoid": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
