--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
   "homepage": "https://github.com/cleves0315/chrome-extension-cli#readme",
   "dependencies": {
     "antd": "^4.18.5",
-    "nanoid": "^3.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
@@ -33,6 +33,7 @@
     "@types/chrome": "^0.0.176",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "babel-eslint": "^10.1.0",
