--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^4.18.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hotkeys-hook": "^3.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
