--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "jsx": "react"
   },
   "include": ["src"],
-  "exclude": ["dist", "node_modules"]
+  "exclude": ["dist", "node_modules", "src/utils/ext.ts"]
 }
