--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hotkeys-hook": "^3.4.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "rc-switch": "~3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
