--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "antd": "^4.18.5",
     "classnames": "^2.3.1",
+    "clean-webpack-plugin": "^4.0.0",
     "rc-switch": "~3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
