--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "- 框架：自动热更新 -",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack --watch --progress",
-    "build": "webpack"
+    "dev": "NODE_ENV=development webpack --watch --progress",
+    "build": "NODE_ENV=production webpack"
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,9 @@
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
-    "style-loader": "^3.3.1",
+    "mini-css-extract-plugin": "^2.7.2",
+    "sass": "^1.58.1",
+    "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
