--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,22 +3,23 @@
   "name": "my chrome dev tools",
   "version": "1.0",
   "icons": {
-    "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
-    "48": "images/icon-48.png",
-    "128": "images/icon-128.png"
+    "16": "icon-16.png",
+    "32": "icon-32.png",
+    "48": "icon-48.png",
+    "128": "icon-128.png"
   },
   "background": {
     "service_worker": "background.js",
     "type": "module"
   },
-  "permissions": ["bookmarks", "commands"],
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
+      "css": ["content-script.css"],
       "js": ["content-script.js"]
     }
   ],
+  "permissions": ["bookmarks", "commands"],
   "commands": {
     "open-panel": {
       "suggested_key": {
