--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "html-loader": "^4.2.0",
     "mini-css-extract-plugin": "^2.7.2",
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
