--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   },
   "homepage": "https://github.com/cleves0315/potato-tag#readme",
   "devDependencies": {
+    "@types/chrome": "^0.0.213",
+    "@types/jquery": "^3.5.16",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-loader": "^4.2.0",
     "mini-css-extract-plugin": "^2.7.2",
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
