--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,12 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
-    "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
     "allowJs": true,
     "moduleResolution": "node",
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
     "esModuleInterop": true,
     "types": ["chrome"]
   }
