--- a/src/manifest.json
+++ b/src/manifest.json
@@ -36,5 +36,12 @@
       "description": "Reload extension"
     }
   },
-  "permissions": ["bookmarks", "commands"]
+  "permissions": ["bookmarks", "commands", "favicon"],
+  "web_accessible_resources": [
+    {
+      "resources": ["_favicon/*"],
+      "matches": ["<all_urls>"],
+      "extension_ids": ["*"]
+    }
+  ]
 }
