--- a/src/manifest.json
+++ b/src/manifest.json
@@ -39,7 +39,7 @@
   "permissions": ["bookmarks", "commands", "favicon"],
   "web_accessible_resources": [
     {
-      "resources": ["_favicon/*"],
+      "resources": ["_favicon/*", "*.woff", "*.woff2", "*.ttf"],
       "matches": ["<all_urls>"],
       "extension_ids": ["*"]
     }
