chore: 添加 .nvmrc webpack.config.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
     "moduleResolution": "node",
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "esModuleInterop": true,
-    "types": ["chrome"]
+    "esModuleInterop": true
   }
 }
