--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/chrome": "^0.0.213",
     "@types/jquery": "^3.5.16",
+    "@types/node": "^18.14.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "html-loader": "^4.2.0",
@@ -28,6 +29,7 @@
     "sass": "^1.58.1",
     "sass-loader": "^13.2.0",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
