--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "webpack.config.js",
   "scripts": {
     "dev": "webpack -d inline-source-map --stats errors-only -w --progress",
-    "build": "webpack --progress"
+    "build": "webpack --progress",
+    "test": "node webpack.config-dev.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +23,10 @@
     "@types/chrome": "^0.0.213",
     "@types/jquery": "^3.5.16",
     "@types/node": "^18.14.0",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "express": "^4.18.2",
     "html-loader": "^4.2.0",
     "mini-css-extract-plugin": "^2.7.2",
     "sass": "^1.58.1",
@@ -32,7 +35,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "jquery": "^3.6.3"
